--- a/MediaPlayer.Infrastructure/MediaPlayer.Infrastructure.csproj
+++ b/MediaPlayer.Infrastructure/MediaPlayer.Infrastructure.csproj
@@ -1,5 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MediaPlayer.Business\MediaPlayer.Business.csproj" />
+    <ProjectReference Include="..\MediaPlayer.Domain\MediaPlayer.Domain.csproj" />
+    <ProjectReference Include="..\MediaPlayer.Application\MediaPlayer.Application.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
